Fixed wraps

--- a/src/assets/css/whatsapp-icon.css
+++ b/src/assets/css/whatsapp-icon.css
@@ -30,4 +30,5 @@
   line-height: 10px;
   text-align: center;
   margin: 0 0 8px;
+  white-space: nowrap;
 }
